--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "author": "phartenfeller <pharti@hotmail.de>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "npx codeceptjs run"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-codeceptjs": "^1.3.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1"
+  },
+  "dependencies": {
+    "codeceptjs": "^2.6.8",
+    "puppeteer": "^3.0.1"
   }
 }
